hphp/hack/test/typecheck/class_property_initialization/call_in_static_varray.php
<?php

class C {
  static function f() {
    return "lol";
  }
  static $x = varray[C::f()];
}
